Harden provider option source filter parsing